examples/test/testpolicy13785.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13785
  namespace: namespace420
spec:
  podSelector:
    matchLabels:
      key22: value22
      key27: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value5
          key20: value37
      podSelector:
        matchLabels:
          key14: value43
          key12: value1
          key48: value36
